--- a/gamerapp/templates/knowledge_base/pc_building_tips/top_15_mistakes_new_pc_builder_make.html
+++ b/gamerapp/templates/knowledge_base/pc_building_tips/top_15_mistakes_new_pc_builder_make.html
@@ -152,7 +152,7 @@
                                 The presence of static electricity poses a risk to sensitive components. If you have access to a table,
                                 you're in the clear; simply ensure all materials are placed directly on the table surface. However,
                                 if a large table is unavailable or you must work on a static conductive surface, consider utilizing an anti-static wristband as a precautionary measure.
-                                The <a href="{% url "coming-soon" %}" style="color:#a00000;text-decoration: underline;">Rosewill Antistatic Wrist Band</a> is a budget-friendly option that effectively minimizes the risk of unintentional component damage by preventing the build-up of static charge.
+                                The <a href="https://amzn.to/4a6apBL" target="_blank" style="color:#a00000;text-decoration: underline;">Rosewill Antistatic Wrist Band</a> is a budget-friendly option that effectively minimizes the risk of unintentional component damage by preventing the build-up of static charge.
                                 <br><br>
                                 <img style="border-radius: 10px;margin-left: auto; margin-right: auto; display: block;" class="card-img-top" src="{% static "images/knowledge_base/top_15_mistakes_new_pc_builders_make/anti static wrist band.jpg" %}" alt="..." />
                                 <br>
