--- a/gamerapp/templates/pc_builds/pc_under_300.html
+++ b/gamerapp/templates/pc_builds/pc_under_300.html
@@ -131,7 +131,7 @@
                                 <p>
                                 <div class="pc-comp-row" >
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_300/pc_under_300_cpu.png' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/4c3fJI1" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_300/pc_under_300_cpu.png' %}" alt="..." /></a>
                                     </div>
                                      <div class="pc-comp-name">
                                         CPU
@@ -143,7 +143,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_300/pc_under_300_gpu.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/4c3fJI1" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_300/pc_under_300_gpu.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         GPU
@@ -155,7 +155,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_300/pc_under_300_motherboard.png' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/3v6aHtu" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_300/pc_under_300_motherboard.png' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Motherboard
@@ -167,7 +167,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_300/pc_under_300_ram.png' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/3IQqosd" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_300/pc_under_300_ram.png' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         RAM
@@ -179,7 +179,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_300/pc_under_300_storage.png' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/43ebV2E" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_300/pc_under_300_storage.png' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Storage
@@ -191,7 +191,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img"v>
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_300/pc_under_300_pws.png' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/3TvSXBl" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_300/pc_under_300_pws.png' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Power Supply
@@ -203,7 +203,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_300/pc_under_300_case.jpg  ' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/3IwOs31" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_300/pc_under_300_case.jpg  ' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Case
@@ -258,7 +258,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/4c3fJI1" target="_blank" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="fs-5 mb-4">
@@ -341,7 +341,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a style="margin-bottom:20px;" class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/3v6aHtu" target="_blank" style="margin-bottom:20px;" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="card-text">
@@ -388,7 +388,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/3IQqosd" target="_blank" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="fs-5 mb-4">
@@ -426,7 +426,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/43ebV2E" target="_blank" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="fs-5 mb-4">
@@ -445,7 +445,7 @@
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h4 class="card-title">Thermaltake Smart 500W 80+ White Certified</h4>
+                                        <h4 class="card-title">Thermaltake Smart White Certified</h4>
                                         <table style="margin-top:50px;" class="table table-bordered border-primary">
                                             <tbody>
                                                 <tr>
@@ -467,7 +467,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a style="margin-bottom:20px;" class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/3TvSXBl" target="_blank" style="margin-bottom:20px;" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="card-text">
@@ -509,7 +509,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a style="margin-bottom:20px;" class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/3IwOs31" target="_blank" style="margin-bottom:20px;" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="card-text">
