--- a/gamerapp/templates/pc_builds/pc_under_400.html
+++ b/gamerapp/templates/pc_builds/pc_under_400.html
@@ -134,7 +134,7 @@
                                 <p>
                                 <div class="pc-comp-row" >
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_400/pc_under_400_cpu.png' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/49Iwir9" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_400/pc_under_400_cpu.png' %}" alt="..." /></a>
                                     </div>
                                      <div class="pc-comp-name">
                                         CPU
@@ -146,7 +146,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_400/pc_under_400_gpu.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/49Iwir9" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_400/pc_under_400_gpu.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         GPU
@@ -158,7 +158,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_400/pc_under_400_motherboard.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/3IuOlEX" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_400/pc_under_400_motherboard.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Motherboard
@@ -170,7 +170,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_400/pc_under_400_ram.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/48N3Jr8" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_400/pc_under_400_ram.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         RAM
@@ -182,7 +182,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_400/pc_under_400_storage.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/3TcxnA9" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_400/pc_under_400_storage.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Storage
@@ -194,7 +194,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_400/pc_under_400_psu.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/3wKbtgd" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_400/pc_under_400_psu.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Power Supply
@@ -206,7 +206,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_400/pc_under_400_case.jpg  ' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/3wLVOwR" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_400/pc_under_400_case.jpg  ' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Case
@@ -260,7 +260,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/49Iwir9" target="_blank" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="fs-5 mb-4">
@@ -350,7 +350,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a style="margin-bottom:20px;" class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/3IuOlEX" target="_blank" style="margin-bottom:20px;" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="card-text">
@@ -410,7 +410,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/48N3Jr8" target="_blank" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="fs-5 mb-4">
@@ -448,7 +448,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/3TcxnA9" target="_blank" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="fs-5 mb-4">
@@ -491,7 +491,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a style="margin-bottom:20px;" class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/3wKbtgd" target="_blank" style="margin-bottom:20px;" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="card-text">
@@ -539,7 +539,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a style="margin-bottom:20px;" class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/3wLVOwR" target="_blank" style="margin-bottom:20px;" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="card-text">
