--- a/gamerapp/templates/pc_builds/pc_under_500.html
+++ b/gamerapp/templates/pc_builds/pc_under_500.html
@@ -144,7 +144,7 @@
                                 <p>
                                 <div class="pc-comp-row" >
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_500/pc_under_500_usd_cpu.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/4cciUx8" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_500/pc_under_500_usd_cpu.jpg' %}" alt="..." /></a>
                                     </div>
                                      <div class="pc-comp-name">
                                         CPU
@@ -156,7 +156,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_500/pc_under_500_usd_gpu.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/3PfXF3g" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_500/pc_under_500_usd_gpu.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         GPU
@@ -168,7 +168,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_500/pc_under_500_usd_motherboard.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/3TuNnPs" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_500/pc_under_500_usd_motherboard.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Motherboard
@@ -180,7 +180,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_500/pc_under_500_usd_ram.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/48TmitI" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_500/pc_under_500_usd_ram.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         RAM
@@ -192,7 +192,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_500/pc_under_500_usd_storage.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/3TttPel" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_500/pc_under_500_usd_storage.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Storage
@@ -204,7 +204,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_500/pc_under_500_usd_psu.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/3IxyKVc" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_500/pc_under_500_usd_psu.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Power Supply
@@ -216,7 +216,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_300/pc_under_300_case.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/3V7iVw7" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_300/pc_under_300_case.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Case
@@ -267,7 +267,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/4cciUx8" target="_blank" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="fs-5 mb-4">
@@ -316,7 +316,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/3PfXF3g" target="_blank" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="fs-5 mb-4">
@@ -353,7 +353,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a style="margin-bottom:20px;" class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/3TuNnPs" target="_blank" style="margin-bottom:20px;" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="card-text">
@@ -400,7 +400,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/48TmitI" target="_blank" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="fs-5 mb-4">
@@ -438,7 +438,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/3TttPel" target="_blank" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="fs-5 mb-4">
@@ -475,7 +475,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a style="margin-bottom:20px;" class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/3IxyKVc" target="_blank" style="margin-bottom:20px;" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="card-text">
@@ -516,7 +516,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a style="margin-bottom:20px;" class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/3V7iVw7" target="_blank" style="margin-bottom:20px;" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="card-text">
