--- a/gamerapp/templates/pc_builds/pc_under_600.html
+++ b/gamerapp/templates/pc_builds/pc_under_600.html
@@ -132,7 +132,7 @@
                                 <p>
                                 <div class="pc-comp-row" >
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_600/pc_under_600_usd_cpu.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/43dMnm1" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_600/pc_under_600_usd_cpu.jpg' %}" alt="..." /></a>
                                     </div>
                                      <div class="pc-comp-name">
                                         CPU
@@ -144,7 +144,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_600/pc_under_600_usd_gpu.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/3IvdIXj" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_600/pc_under_600_usd_gpu.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         GPU
@@ -156,7 +156,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_600/pc_under_600_usd_motherboard.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/48PMG7U" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_600/pc_under_600_usd_motherboard.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Motherboard
@@ -168,7 +168,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_600/pc_under_600_usd_ram.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/4c63lqz" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_600/pc_under_600_usd_ram.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         RAM
@@ -180,7 +180,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_600/pc_under_600_usd_storage.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/3wOlMzY" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_600/pc_under_600_usd_storage.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Storage
@@ -192,7 +192,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_600/pc_under_600_usd_psu.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/48NDiRZ" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_600/pc_under_600_usd_psu.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Power Supply
@@ -204,7 +204,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_600/pc_under_600_usd_case.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/3Ty5ZOM" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_600/pc_under_600_usd_case.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Case
@@ -255,7 +255,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/43dMnm1" target="_blank" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="fs-5 mb-4">
@@ -304,7 +304,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/3IvdIXj" target="_blank" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="fs-5 mb-4">
@@ -341,7 +341,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a style="margin-bottom:20px;" class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/48PMG7U" target="_blank" style="margin-bottom:20px;" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="card-text">
@@ -389,7 +389,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/4c63lqz" target="_blank" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="fs-5 mb-4">
@@ -427,7 +427,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/3wOlMzY" target="_blank" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="fs-5 mb-4">
@@ -465,7 +465,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a style="margin-bottom:20px;" class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/48NDiRZ" target="_blank" style="margin-bottom:20px;" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="card-text">
@@ -504,7 +504,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a style="margin-bottom:20px;" class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/3Ty5ZOM" target="_blank" style="margin-bottom:20px;" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="card-text">
